# Poker-App-Sim

./: .gitignore  README.md  docker-compose.yml
backend/: Dockerfile  entrypoint.sh  pyproject.toml
backend/src/: main.py
backend/src/api/v1/: hands.py
backend/src/core/: database.py  dependencies.py  settings.py
backend/src/db_init/: init.sql
backend/src/models/: __init__.py  hand.py
backend/src/repository/: __init__.py  hand_repository.py
backend/src/services/: __init__.py  poker_service.py
backend/tests/: conftest.py  test_hands_api.py
frontend/: Dockerfile  jest.config.js  jest.setup.js  next.config.ts  package-lock.json  package.json  tailwind.config.ts
frontend/src/app/: layout.tsx  page.tsx
frontend/src/components/poker/: ActionControls.tsx  GameLog.tsx  HandHistory.tsx  PlayerControls.tsx  PokerTable.tsx  StackControls.tsx
frontend/src/components/ui/: playing-card.tsx
frontend/src/context/: PokerContext.tsx
frontend/src/lib/: utils.ts
frontend/src/lib/game-logic/: actions.test.ts  actions.ts  deck.test.ts  deck.ts  flow.test.ts  flow.ts  rules.test.ts  rules.ts
frontend/src/lib/mappers/: hand.mapper.ts
frontend/src/lib/services/: hand.service.ts  log.service.ts
frontend/src/lib/state/: initialState.ts  reducer.test.ts  reducer.ts
frontend/src/lib/state/handlers/: handHandler.ts  handSetup.ts  playerActionHandler.ts
frontend/src/types/: pokerDTOs.ts  pokerTypes.ts
